# ER-AIMusicPage

./: .gitignore  .secrets.example  Dockerfile  README.md  VERSION  docker-compose.portainer.yml  docker-compose.yml
.github/: labeler.yml
.github/workflows/: ci-orchestrator.yml  pr-orchestrator.yml  release.yml  rollback.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  guests.py  media.py  settings.py
backend/app/core/: config.py  db.py
backend/app/models/: guest.py  media.py  settings.py
backend/app/services/: email.py
data/: er_music.db
docs/: index.html  styles.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: ErrorBoundary.tsx  GuestManager.tsx  Login.tsx  MusicPlayer.tsx  SettingsModal.tsx  Upload.tsx  VideoGrid.tsx
frontend/src/styles/: index.css
scripts/: preflight.sh  setup_local_ci.sh  version_manager.py
